# chess-jepa

./: .gitignore  LICENSE  README.md  gen_train_eval.sh  main.py  pgn_to_bin.py  pyproject.toml  test.pgn  train.py
chess_jepa/: pgn.py  tokenizer.py
data/: .gitignore  download.sh
tests/: test_pgn.py  test_tokenizer.py
