[tool.poetry]
name = "chess-jepa"
version = "0.1.0"
description = ""
authors = ["Andrei Savu <savu.andrei@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
python-chess = "^1.999"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
